chore: prepare configuration and pom for production deployment